tests/param/error/missing_challenge.ggt
setting symmetric.
problem_type decisional.

input [ 1 ] @ 1.

